navigation remove dashes, fix alignment

--- a/portfolio-website/public/styles/styles.css
+++ b/portfolio-website/public/styles/styles.css
@@ -69,6 +69,7 @@ a:active {
   left: 0;
   margin: 48px 0px;
   width: 100%;
+  z-index: 100;
 }
 
 nav {
@@ -83,7 +84,7 @@ nav {
   display: flex;
   list-style: none;
   list-style-type: none;
-  width: 400px;
+  width: 500px;
   justify-content: space-between;
   font-size: 20px;
 }
@@ -92,6 +93,10 @@ nav {
   display: flex;
   text-decoration: none;
   content: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
 .button {
@@ -109,6 +114,7 @@ nav {
   text-align: center;
   margin: var(--size-LG) 0;
   transition: all 0.15s ease-in-out;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -191,15 +197,13 @@ body {
   justify-content: flex-start;
 }
 
-li::before {
+.sublistItem::before {
   color: var(--color-highlight);
   content: '- ';
   padding-right: var(--size-SM);
 }
 
 .sublistItem,
-.ul,
-.li,
 .subsublistItem {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
